--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a personal blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "pm2 start app.js --watch"
   },
   "keywords": [
     "blog"
@@ -12,6 +13,7 @@
   "author": "Xuning Tian",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "pm2": "^3.5.0"
   }
 }
