--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Xuning Tian",
   "license": "MIT",
   "dependencies": {
+    "art-template": "^4.13.2",
     "express": "^4.16.4",
     "pm2": "^3.5.0"
   }
